--- a/src/app/product-details/product-details.html
+++ b/src/app/product-details/product-details.html
@@ -1,15 +1,15 @@
 @if (product(); as p) {
-  <div class="container m-4">
-    <div class="row">
+
+    <div class="row m-5">
       <div class="col-lg-6">
         <div class="container mb-5 text-center">
-          <img [src]="p.images.at(1)" class="rounded-4 shadow-sm" alt="" />
+          <img [src]="p.images.at(0)" class="rounded-4 shadow-sm main-img" alt="" />
         </div>
         <div class="row product-grid g-3">
           @for (image of [1, 2, 3, 4]; track $index) {
             <div class="col-lg-3 d-flex justify-content-center">
               <a class="hover-container d-block">
-                <img class="rounded shadow-sm img-custom" [src]="p.images.at(1)" alt="product" />
+                <img class="rounded shadow-sm img-custom" [src]="p.images.at(0)" alt="product" />
               </a>
             </div>
           }
@@ -19,7 +19,7 @@
         <h1>{{ p.brand }}</h1>
         <p>{{ p.description }}</p>
         <p-rating [(ngModel)]="p.rating" [readonly]="true"> </p-rating>
-        <div class="d-flex justify-content-end mt-5">
+        <div class="d-flex justify-content-end mt-5 mx-4">
           <p class="fw-bold fs-3">{{ p.price }}$</p>
         </div>
         @if (p.stock > 0) {
@@ -31,15 +31,15 @@
             <span>out of stock</span>
           </div>
         }
-        <div class="d-inline-flex  my-5  fw-bold bg-secondary p-1  justify-content-center p-2  rounded-4 text-white">
+        <div
+          class="d-inline-flex my-5 fw-bold bg-secondary p-1 justify-content-center p-2 rounded-4 text-white"
+        >
           <p class="m-0">{{ p.category }}</p>
         </div>
         <div class="my-5 d-flex gap-3">
           <button class="btn btn-outline-success rounded-pill">buynow</button>
           <button class="btn btn-outline-success rounded-pill">add to cart</button>
         </div>
-       
       </div>
     </div>
-  </div>
 }
