--- a/src/app/product-card/product-card.html
+++ b/src/app/product-card/product-card.html
@@ -1,9 +1,9 @@
 @if (product(); as p) {
   <div class="card rounded-5 shadow-sm  w-100" style="width: 18rem ">
-    <img [src]="product()?.images?.at(1)" class="card-img-top" alt="..." />
+    <img [src]="product()?.images?.at(0)" class="card-img-top" alt="..." />
 
     @if (p.stock > 0) {
-      <div class="z-1 position-absolute p-1 m-1 rounded-1 bg-success text-white">
+      <div class="z-1 position-absolute p-1 m-3 rounded-1 bg-success text-white">
         <span>in stock</span>
       </div>
     } @else {
@@ -23,7 +23,7 @@
         <p-rating [ngModel]="p.rating" [readonly]="true"> </p-rating>
       </div>
       <div class="d-flex justify-content-end">
-              <a herf="#" class="btn btn-outline-success rounded-pill">Add to cart</a>
+              <button class="btn btn-outline-success rounded-pill" (click)="addToCart($event)">Add to cart</button>
       </div>
     </div>
   </div>
