--- a/src/app/product-wraper/product-wraper.html
+++ b/src/app/product-wraper/product-wraper.html
@@ -1,19 +1,21 @@
-
 <div class="container">
-
-
-<div class="d-flex m-5 fw-bold fs-3">
+  <div class="d-flex m-5 fw-bold fs-3">
     <p>Welcome to our shopping website , start browsing</p>
-
-</div>
-
-<div class="d-flex justify-content-center m-1">
-  <div class="row justify-content-center g-4 m-1 ">
-    @for (product of productList(); track product.id) {
-      <div class="col-lg-3 col-md-6 d-flex justify-content-center mb-3 ">
-        <a class="link-offset-2 link-underline link-underline-opacity-0 " [routerLink]="['/product-details',product.id]" routerLinkActive="active"> <app-product-card [product]="product"></app-product-card></a>
-      </div>
-    }
   </div>
-</div>
+
+  <div class="d-flex justify-content-center m-1">
+    <div class="row justify-content-center g-4 m-1">
+      @for (product of productList(); track product.id) {
+        <div class="col-lg-3 col-md-6 d-flex justify-content-center mb-3">
+          <a
+            class="link-offset-2 link-underline link-underline-opacity-0"
+            [routerLink]="['/product-details', product.id]"
+            routerLinkActive="active"
+          >
+            <app-product-card [product]="product"></app-product-card
+          ></a>
+        </div>
+      }
+    </div>
+  </div>
 </div>
